# hikvision-mvs-ffi

./: .gitattributes  Cargo.toml  LICENSE  README-En.md  README.md  build.rs
Docs/: 工业相机Windows SDK开发指南V4.5.1（C）.chm
Includes/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvISPErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h
examples/: enum_device.rs  grab_image.rs
src/: camera_control.rs  camera_params.rs  error_define.rs  isp_error_define.rs  lib.rs  obsolete_cam_params.rs  obsolete_interface.rs  pixel_type.rs
